--- a/index.html
+++ b/index.html
@@ -17,15 +17,11 @@
   <meta content="Приглашение на свадьбу - Николай &amp; Грета (18.07.2025)" property="og:title" />
   <meta content="Жених и Невеста приглашают вас на свадьбу. Ваше приглашение:" property="og:description" />
   <meta content="website" property="og:type" />
-  <!-- <meta content="http://weddingpost.ru/template/invent/screenshot/911266.png" property="og:image" /> -->
-
-
   <link crossorigin="anonymous" href="./src/bootstrap.min.css"
     integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" rel="stylesheet">
   <!--Custom styles for this template-->
   <link href="./src/cabinet.css" rel="stylesheet">
   <link href="./src/userinvent.css" rel="stylesheet">
-  <script src="https://api-maps.yandex.ru/v3/?apikey=15123f89-2a38-4f7f-9f6e-3abb28a90020&lang=ru_RU"></script>
 
 </head>
 
@@ -316,7 +312,18 @@
                   Пожалуйста подтвердите свое присутствие до 18.07.2025
                 </div>
               </div>
-              <div id="map" style="width: 600px; height: 400px"></div>
+
+              <div style="margin: 40px 0;">
+                <a target="_blank" class="textLine" action="text16" href="https://yandex.ru/maps/-/CHGwZ2JD" style="
+                      font-size: 14pt;
+                      font-family: CormorantInfant-Light;
+                      text-align: center;
+                    ">
+                  ул. Ломоносова, 9, Ижевск
+                  <img src="./src/map.jpg" alt="map">
+                </a>
+              </div>
+
               <div style="top: 0%; left: 0%" type="text" class="moveBox">
                 <div spellcheck="false" style="
                       font-size: 16pt;
@@ -374,39 +381,9 @@
   <script src="./src/jquery.min.js"></script>
   <script crossorigin="anonymous" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
     src="./src/bootstrap.min.js"></script>
-  <script src="./src/userinvent.js"></script>
+  <!-- <script src="./src/userinvent.js"></script> -->
   <script src="./src/userlib.min.js"></script>
   <script crossorigin="anonymous" src="./src/twemoji.min.js"></script>
-  <script>
-    initMap();
-
-    async function initMap() {
-      // Промис `ymaps3.ready` будет зарезолвлен, когда загрузятся все компоненты основного модуля API
-      await ymaps3.ready;
-
-      const { YMap, YMapDefaultSchemeLayer } = ymaps3;
-
-      // Иницилиазируем карту
-      const map = new YMap(
-        // Передаём ссылку на HTMLElement контейнера
-        document.getElementById('map'),
-
-        // Передаём параметры инициализации карты
-        {
-          location: {
-            // Координаты центра карты
-            center: [53.222237, 56.84819],
-
-            // Уровень масштабирования
-            zoom: 10
-          }
-        }
-      );
-
-      // Добавляем слой для отображения схематической карты
-      map.addChild(new YMapDefaultSchemeLayer());
-    }
-  </script>
 </body>
 
 </html>
